KMR 26-AUG-2002 (Kevin M. Rosenberg)
    - Added support for asdf definition files
    - Add call to original REQUIRE function if system file
      isn't found with CLC-REQUIRE

PVE 05-AUG-2002 (Peter Van Eynde)
    Introduced cl-builder user to solve build problems.

KMR 23-JULY-2002 (Kevin M. Rosenberg)
    * common-lisp-controller.lisp:
	 - Changes to logical pathname translations to support Lispworks
	   and AllegroCL. Tested okay with CMUCL and SBCL.
	 - Added *clc-send-command-filename* and make-clc-send-command-string 
	 - Modifications to support case-sensitive AllegroCL.

PVE 15-MAY-2002
    Created version 3 with a build daemon!
    Changes:
        - depricated the repositories
        - build daemon
        - minial debconf interface
        - man pages

PVE 10-MAY-2001
    Added the install-defsystem support.

PVE 1-MAY-2001
    Added common-lisp-controller.lisp with init-common-lisp-controller
    and add-translation function

    Move defsystem to common-lisp-controller, added the banner
    feature.

    INCOMPATIBLE CHANGE: now all systems should use
    cl-library:;foo;bar.lisp not anymore:
    cl-library:foo;bar.lisp as the last one should translate to
    /foo/bar.lisp while the first one translates to
    <root-of-cl-library>/foo/bar.lisp.

  