@@ -3,25 +3,26 @@
 
 (in-package :common-lisp-controller)
 
-(defvar *original-require-function* nil
-  "Holds vendor's original require function")
+(eval-when (:load-toplevel :compile-toplevel :execute)
+  (defvar *original-require-function* nil
+    "Holds vendor's original require function")
 
-(unless *original-require-function*
-  (setq *original-require-function*
-         #-(or (and :excl :allegro-v4.0) :mcl :sbcl :lispworks)
-	 (symbol-function 'lisp:require)
-         #+(and :excl :allegro-v4.0)
-	 (symbol-function 'cltl1:require)
-         #+:lispworks3.1
-	 (symbol-function 'common-lisp::require)
-         #+:sbcl
-	 (symbol-function 'cl:require)
-         #+(and :lispworks (not :lispworks3.1))
-	 (symbol-function 'system::require)
-         #+(and :lispworks :lispworks3.1)
-	 (symbol-function 'common-lisp::require)
-         #+:mcl
-	 (symbol-function 'ccl:require)))
+  (unless *original-require-function*
+    (setq *original-require-function*
+	  #-(or (and :excl :allegro-v4.0) :mcl :sbcl :lispworks)
+	  (symbol-function 'lisp:require)
+	  #+(and :excl :allegro-v4.0)
+	  (symbol-function 'cltl1:require)
+	  #+:lispworks3.1
+	  (symbol-function 'common-lisp::require)
+	  #+:sbcl
+	  (symbol-function 'cl:require)
+	  #+(and :lispworks (not :lispworks3.1))
+	  (symbol-function 'system::require)
+	  #+(and :lispworks :lispworks3.1)
+	  (symbol-function 'common-lisp::require)
+	  #+:mcl
+	  (symbol-function 'ccl:require))))
 
 (defun original-require (&rest args)
   (if *original-require-function*
